<resources>
    <string name="app_name">Flicko</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="no_internet_error_msg">Please check your internet and try again</string>
    <string name="generic_server_error">Something went wrong. Please try again later.</string>
    <string name="author">author</string>
    <string name="height">height</string>
    <string name="width">width</string>
    <string name="close">close</string>
</resources>