<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="photoItem"
            type="com.farahaniconsulting.flicko.dto.PhotoItemDTO" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/appbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:elevation="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@color/white"
                            app:contentInsetStartWithNavigation="0dp"
                            app:navigationContentDescription="@string/close"
                            app:navigationIcon="@drawable/ic_cross_image" />
                    </com.google.android.material.appbar.AppBarLayout>


                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="8dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="8dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="8dp" />

                    <ImageView
                        android:id="@+id/header_image_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="64dp"
                        android:layout_marginBottom="29dp"
                        app:imageSrc="@{photoItem.imageUrl}"
                        app:layout_constraintBottom_toTopOf="@id/guidelineCentre"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/ic_empty_image" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineCentre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.3" />

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_half_medium"
                        android:layout_marginEnd="@dimen/margin_less_half"
                        android:layout_marginBottom="@dimen/margin_half_medium"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/title"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/guidelineCentre" />

                    <TextView
                        android:id="@+id/titleValueTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="18dp"
                        android:ellipsize="end"
                        android:inputType="textMultiLine"
                        android:singleLine="true"
                        android:text="@{photoItem.title}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/titleTextView"
                        tools:text="title" />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/description"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/titleValueTextView" />

                    <TextView
                        android:id="@+id/descriptionValueTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="@dimen/margin_less_half"
                        android:ellipsize="end"
                        android:inputType="textMultiLine"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
                        tools:text="description" />

                    <TextView
                        android:id="@+id/imageWidthTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/width"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/descriptionValueTextView" />

                    <TextView
                        android:id="@+id/imageWidthValueTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="@dimen/margin_less_half"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/imageWidthTextView"
                        tools:text="width" />

                    <TextView
                        android:id="@+id/imageHeightTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/height"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/imageWidthValueTextView" />

                    <TextView
                        android:id="@+id/imageHeightValueTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="@dimen/margin_less_half"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{photoItem.imageHeight}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/imageHeightTextView"
                        tools:text="height" />

                    <TextView
                        android:id="@+id/imageAuthorTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/author"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/imageHeightValueTextView" />

                    <TextView
                        android:id="@+id/imageAuthortValueTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_half_medium"
                        android:layout_marginEnd="@dimen/margin_less_half"
                        android:layout_marginBottom="@dimen/margin_half_plus_medium"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{photoItem.author}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:inputType="textMultiLine"
                        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/imageAuthorTextView"
                        tools:text="author" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>